--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
         </ul>
     </nav>
     <main>
+
     <section>
         <h2>Welcome to Field & Feast</h2>
+    </section>
+
+    <section>
         <p>At Field & Feast, we believe that the finest meals begin at the source. Rooted in
            tradition yet refined for the modern palate, our farm-to-table philosophy celebrates
            the beauty of seasonality, sustainability, and craftsmanship. From the sun-drenched
@@ -35,6 +39,9 @@
 
     <section>
         <h2>Our Offerings</h2>
+    </section>
+
+    <section>
         <h3>Artisan Provisions</h3>
         <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local
            growers. Each item is chosen for its freshness, flavor, and integrity.
@@ -72,76 +79,85 @@
     </section>
 
     <section>
-        <h3>A Gallery of Field & Feast</h3>
+        <h2>A Gallery of Field & Feast</h2>
+    </section>
+
+    <section>
+
         <p>Experience the elegance and artistry behind Field & Feast through our curated
             collection of images. From lush fields and handcrafted ingredients to beautifully
             plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
-        <picture>
-        <source media="(min-width:600px)"
-        srcset="images/tomatoes-600w.jpg"> 
-        <source media="(min-width:300px)"
-        srcset="images/tomatoes-300w.jpg" >
-        <img src="images/tomatoes-200w.jpg" 
-        alt="Heirloom tomatoes">
-        </picture>
-        <p>Heirloom tomatoes at peak ripeness.</p>
+            <figure>
+                <img src="images/tomatoes-600w.jpg"
+                srcset="images/tomatoes-200w.jpg 1200w,
+                images/tomatoes-300w.jpg 900w,
+                images/tomatoes-600w.jpg 600w"
+                sizes="(min-width:1200px) 200px,
+                (min-width:900px) 300px, 600px"
+                alt="vibrant heirloom tomatoes fresh from the vine">
+                <figcaption>Heirloom tomatoes at peak ripeness</figcaption>
+            </figure>
 
-        <picture>
-        <source media="(min-width:600px)"
-        srcset="images/olive-oil-600w.jpg"> 
-        <source media="(min-width:300px)"
-        srcset="images/olive-oil-300w.jpg" >
-        <img src="images/olive-oil-200w.jpg" 
-        alt="drizzling olive oil">
-        </picture>
-        <p>Drizzling golden olive oil over fresh harvest.</p>
 
-        <picture>
-        <source media="(min-width:600px)"
-        srcset="images/table-setting-600w.jpg"> 
-        <source media="(min-width:300px)"
-        srcset="images/table-setting-300w.jpg">
-        <img src="images/table-setting-200w.jpg" 
-        alt="night tablescape">
-        </picture>
-         <p>Elegant tablescape under the evening sky.</p>
+            <figure>
+                <img src="images/olive-oil-600w.jpg"
+                srcset="images/olive-oil-200w.jpg 1200w,
+                images/olive-oil-300w.jpg 900w,
+                images/olive-oil-600w.jpg 600w"
+                sizes="(min-width:1200px) 200px,
+                (min-width:900px) 300px, 600px"
+                alt="drizzling of olive oil">
+                <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
+            </figure>
 
-        <picture>
-        <source media="(min-width:600px)"
-        srcset="images/chef-plating-600w.jpg"> 
-        <source media="(min-width:300px)"
-        srcset="images/chef-plating-300w.jpg">
-        <img src="images/chef-plating-200w.jpg" 
-        alt="artful plating">
-        </picture>
-        <p>Artful plating with seasonal ingredients.</p>
+            <figure>
+                <img src="images/table-setting-600w.jpg"
+                srcset="images/table-setting-200w.jpg 1200w,
+                images/table-setting-300w.jpg 900w,
+                images/table-setting-600w.jpg 600w"
+                sizes="(min-width:1200px) 200px,
+                (min-width:900px) 300px, 600px"
+                alt="night elegant tablescape">
+                <figcaption>Elegant tablescape under the evening sky.</figcaption>
+            </figure>
 
-        <picture>
-        <source media="(min-width:600px)"
-        srcset="images/basket-600w.jpg"> 
-        <source media="(min-width:300px)"
-        srcset="images/basket-300w.jpg">
-        <img src="images/basket-200w.jpg" 
-        alt="subscription basket">
-        </picture>
-        <p>Our monthly basket, curated with care.</p>
+            <figure>
+                <img src="images/chef-plating-600w.jpg"
+                srcset="images/chef-plating-200w.jpg 1200w,
+                images/chef-plating-300w.jpg 900w,
+                images/chef-plating-600w.jpg 600w"
+                sizes="(min-width:1200px) 200px,
+                (min-width:900px) 300px, 600px"
+                alt="artful plating">
+                <figcaption>Artful plating with seasonal ingredients.</figcaption>
+            </figure>
 
-    </section>
+            <figure>
+                <img src="images/basket-600w.jpg"
+                srcset="images/basket-200w.jpg 1200w,
+                images/basket-300w.jpg 900w,
+                images/basket-600w.jpg 600w"
+                sizes="(min-width:1200px) 200px,
+                (min-width:900px) 300px, 600px"
+                alt="monthly basket">
+                <figcaption>Our monthly basket, curated with care.</figcaption>
+            </figure>
 
-    <section>
-        <a href="FullGallery">View Our Full Gallery</a>
-    </section>
-    </main>
+        <a href="gallery.html">View Our Full Gallery</a>
+        </section>
+
+</main>
     <footer>
         <address>
          123 Estate Lane, Wine Country, CA<br>
          (555) 123-4567<br>
 
-          <a href="email">hello@fieldandfeast.com</a>
+        <a href="mailto:hello@fieldandfeast.com">hello@fieldandfeast.com</a>
    
         </address>
 
     <a href="www.instagram.com">Instagram</a> <a href="www.facebook.com">Facebook</a>    
     </footer>
     </body>
+</html>
