--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
         <h2>Our Offerings</h2>
     </section>
 
-    <section>
+    <section class="offerings">
         <h3>Artisan Provisions</h3>
         <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local
            growers. Each item is chosen for its freshness, flavor, and integrity.
 </p>
     </section>
     
-     <section>
+     <section class="dining">
         <h3>Exclusive Dining Experiences</h3>
         <p>Join us for intimate chef-led tastings and farm-to-table feasts, where carefully 
             crafted menus highlight the best of the season.
             </p>
     </section>
     
-    <section>
+    <section class="monthly">
         <h3>The Field & Feast Monthly Basket</h3>
         <p>Experience a curated selection of premium seasonal ingredients delivered
             to your doorstep each month.
